# mobulator

./: Cargo.toml  README.md
mobulator-cpu-test/: Cargo.toml
mobulator-cpu-test/src/: main.rs
mobulator-macros/: Cargo.toml
mobulator-macros/src/: lib.rs
mobulator-test-macros/: Cargo.toml
mobulator-test-macros/src/: lib.rs
src/: byte_instruction.rs  cpu.rs  cpu_tests.rs  instruction.rs  instructions.rs  lib.rs  main.rs  memory.rs  registers.rs  utils.rs
tests/: cpu_test_suite.rs
