[package]
name = "mobulator"
version = "0.1.0"
edition = "2024"

[dependencies]
mobulator-macros = { path = "./mobulator-macros/" }

anyhow = "1.0.97"

[dev-dependencies]
mobulator-test-macros = { path = "./mobulator-test-macros/" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
